--- a/css/styles/legacy.css
+++ b/css/styles/legacy.css
@@ -93,6 +93,7 @@ img.alignleft			{ border: 3px solid #EEE; }
 .sf-menu li:hover li a, .sf-menu li li:hover li a, .sf-menu li li li:hover li a, .sf-menu li li li li:hover li a { background: #f5f5f5; color: #666; font-size: 11px; }
 .sf-menu .sf-with-ul	{ padding-right: 15px; }
 .sf-sub-indicator		{ background: url(../../images/dropdown_dark.png) no-repeat; width: 5px; height: 5px; text-indent: -9999px; display: inline-block; position: relative; left: 7px; top: 13px; }
+*:first-child+html .sf-sub-indicator { top: -5px; }
 
 .quick-nav				{ float: right; list-style: none; margin: 0; padding: 0; }
 .quick-nav li			{ padding: 7px 5px 0 0; float: left; display: inline; }
@@ -322,6 +323,7 @@ html[xmlns] #wp125adwrap_2c	{ display: block; }
 #footer .widgetcontent	{ font-size: 11px; background: none; padding: 0; border: none; }
 #footer .footer-message	{ margin: 0; padding: 10px 15px 0; font-size: 11px; }
 #footer .footer-message p { margin: 0 0 0.5em; }
+#footer .footer-message .floatright { margin-left: 20px; }
 #footer-sidebar		{ overflow: hidden; margin: 10px 10px 0; padding: 0 0 10px; border-bottom: 1px solid #CCC; }
 #footer-sidebar .widgetcontainer	{ float: left; margin: 0; max-width: 250px; }
 #footer-sidebar ul	{ list-style: none; margin: 0; padding: 0; }
